# Programacao-para-Multiplataforma-I

./: .env.sample  .gitignore  README.md  pyproject.toml
prova_mp_i/: application.py  main.py
prova_mp_i/config/: database.py  log_config.py  settings.py
prova_mp_i/controller/: usuario_controller.py
prova_mp_i/domain/dto/: dto.py  dtos.py
prova_mp_i/domain/model/: models.py
prova_mp_i/repository/: usuario_repository.py
prova_mp_i/service/: usuario_service.py
