[tool.poetry]
name = "prova-mp-i"
version = "0.1.0"
description = ""
authors = ["Leao10 <gabriellfrigo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
